--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 	width: 100%;
 }
 body {
-	height: 100%;
+	height:
 	width: 100%;
 	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 }
@@ -20,7 +20,7 @@ body {
 	width: 230px;
 	height: 80px;
 	color: white;
-	background-color: #44d8be;
+	background-color: #4aaaa5;
 	text-align: center;
 	font-family: 'Georgia', Times, Times New Roman, serif;
 
@@ -36,7 +36,7 @@ body {
 	text-align: center;
 	font-family: 'Georgia', Times, Times New Roman, serif;
 	font-size: 14px;
-	color: darkgray;
+	color: #4aaaa5;
 	background-color: white;
 }
 
@@ -48,12 +48,13 @@ body {
 	
 }
 
-#Portfolio {
-	margin-top: 50px;
+.about {
+	margin-top: 0px;
 	margin-left: 50px;
 	height: 454px;
 	width: 454px;
-	border: solid #dddddd
+	border: solid #dddddd;
+	background-color:#ffffff;
 }
 
 .social {
@@ -65,6 +66,7 @@ body {
 	width: 270px;
 	text-align: center;
 	font-family: 'Georgia', Times, Times New Roman, serif;
+	color: #4aaaa5;
 	background-color: white;
 }
 #Box1 {
