--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
 	text-align: center;
 	font-family: 'Georgia', Times, Times New Roman, serif;
 	font-size: 14px;
-	color: #4aaaa5;
+	color: red;
 	background-color: white;
 }
 
@@ -60,8 +60,8 @@ body {
 .social {
 	position: relative;
 	padding-top: 15px;
-	margin-left: 580px;
-	margin-top: -400px;
+	margin-left: 520px;
+	margin-top: -300px;
 	height: 250px;
 	width: 270px;
 	text-align: center;
@@ -100,4 +100,17 @@ body {
 	font-family: 'Georgia', Times, Times New Roman, serif;
 	color: white;
 	background-color: #666666;
+}
+
+#a {
+	margin: 15px;
+}
+#aa,#b,#c {
+	color: red;
+}
+#asocial {
+	position: relative;
+	left: 40px;
+	bottom: 100px;
+	border: solid 1px black;
 }
