--- a/style.css
+++ b/style.css
@@ -1,6 +1,4 @@
-* {
-	width: 100%;
-}
+
 body {
 	width: 100%;
 	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
@@ -9,22 +7,20 @@ body {
 	width: 960px;
 	height: 90px;
 	background-color: #ffffff;
-	border: solid #cccccc
+	border: solid #cccccc;
 }
 .Name {
 	margin-left: 50px;
-	margin-top: 5px;
-	padding-top: 1px;
 	width: 230px;
-	height: 80px;
+	height: 100%;
 	color: white;
 	background-color: #4aaaa5;
 	text-align: center;
+	line-height: 80px;
 	font-family: 'Georgia', Times, Times New Roman, serif;
+	font-size: 24px;
 }
 .navbar {
-	position: relative;
-	float: right;
 	margin-top: -70px;
 	margin-right: 12%;
 	width: 300px;
@@ -33,37 +29,37 @@ body {
 	text-align: center;
 	font-family: 'Georgia', Times, Times New Roman, serif;
 	font-size: 14px;
-	color: red;
 	background-color: white;
 }
 .MainBody {
-	position: relative;
 	width: 960px;
 	height: 475px;
 	background-image: url("images/vintage-concrete.png")
 }
 .about {
-	margin-left: 50px;
+	top: 100px;
+	width: 650px;
 	height: 350px;
-	width: 454px;
 	border: solid #dddddd;
 	background-color:#ffffff;
+}
+p {
+	font-family: 'Georgia', Times, Times New Roman, serif;
 }
 #asocial {
 	position: relative;
 	padding: 15px;
-	left: 600px;
-	bottom: 300px;
-	border: solid 1px black;
-	width: 250px;
+	left: 664px;
+	bottom: 282px;
+	border: solid #dddddd;
+	width: 240px;
 	height: 200px;
 	font-family: 'Georgia', Times, Times New Roman, serif;
 	text-align: center;
 	color: #4aaaa5;
 	background-color: white;
 }
-#Box1 {
-	
+#Box1 {	
 	width: 225px;
 	height: 225px;
 }
@@ -87,10 +83,10 @@ body {
 }
 #Footer {
 	position: relative;
-	bottom: -65px;
 	width: 960px;
 	height: 50px;
 	text-align: center;
+	line-height: 50px;
 	font-family: 'Georgia', Times, Times New Roman, serif;
 	color: white;
 	background-color: #666666;
@@ -99,20 +95,33 @@ body {
 	margin: 15px;
 }
 #aa,#b,#c {
-	color: red;
-}
-.aMainBody {
-	position: relative;
-	width: 500px;
-	height: 300px;
-	background-image: url("images/vintage-concrete.png")
-	border: solid 1px black;
+	color: blue;
 }
 .ContactMe {
 	position: relative;
-	right: -80px;
-	bottom: -70px;
-	width: 454px;
+	width: 650px;
 	height: 350px;
+	background-color: white;
+	border: solid #dddddd;
+	font-family: 'Georgia', Times, Times New Roman, serif;
+	color: #4aaaa5;
+}
+#aboutmetitle {
+	width: 200px;
+	color: #4aaaa5;
+	text-align: center;
+	font-family: 'Georgia', Times, Times New Roman, serif;
+}
+#socialcontact {
+	position: relative;
+	top: -430px;
+	right: -667px;
+	padding: 15px;
+	border: solid #dddddd;
+	width: 240px;
+	height: 200px;
+	font-family: 'Georgia', Times, Times New Roman, serif;
+	text-align: center;
+	color: #4aaaa5;
 	background-color: white;
 }
