--- a/style.css
+++ b/style.css
@@ -59,27 +59,33 @@ p {
 	color: #4aaaa5;
 	background-color: white;
 }
-#Box1 {	
-	width: 225px;
-	height: 225px;
+#Box1 {
+	position: relative;
+	right: -30px;
+	width: 185px;
+	height: 185px;
+	line-height: 185px;
 }
 #Box2 {
 	position: relative;
-	margin-left: 227px;
-	margin-top: -227px;
-	width: 225px;
-	height: 225px;
+	margin-left: 250px;
+	margin-top: -185px;
+	width: 185px;
+	height: 185px;
+	line-height: 185px;
 }
 #Box3 {
-	width: 225px;
-	height: 225px;
+	position: relative;
+	right: -30px;
+	width: 185px;
+	height: 185px;
 }
 #Box4 {
 	position: relative;
-	margin-left: 227px;
-	margin-top: -227px;
-	width: 225px;
-	height: 225px;
+	margin-left: 250px;
+	margin-top: -185px;
+	width: 185px;
+	height: 185px;
 }
 #Footer {
 	position: relative;
@@ -95,7 +101,7 @@ p {
 	margin: 15px;
 }
 #aa,#b,#c {
-	color: blue;
+	color: darkgrey;
 }
 .ContactMe {
 	position: relative;
@@ -124,4 +130,24 @@ p {
 	text-align: center;
 	color: #4aaaa5;
 	background-color: white;
+}
+#ContactFooter {
+	position: relative;
+	top: -236px;
+	width: 960px;
+	height: 50px;
+	text-align: center;
+	line-height: 50px;
+	font-family: 'Georgia', Times, Times New Roman, serif;
+	color: white;
+	background-color: #666666;
+}
+#Portfolio {
+	padding-left: 35px;
+	width: 650px;
+	height: 450px;
+	background-color: white;
+	border: solid #dddddd;
+	font-family: 'Georgia', Times, Times New Roman, serif;
+	color: #4aaaa5;
 }
